# SPL1-epidemic-chain-stopper

./: Agent.cpp  Agent.h  CMakeLists.txt  Graph.cpp  Graph.h  Session.cpp  Session.h  Tree.cpp  Tree.h  config2.json  main.cpp
Include/: Agent.h  Session.h  json.hpp
src/: Agent.cpp  Graph.cpp  Session.cpp  Tree.cpp  main.cpp
